--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <header>
+        <img src="assets/paula-profile.jpg" alt="Paula Cruz Baquero" class="profile-img">
         <h1>Paula Cruz Baquero</h1>
-        <p>Systems Engineer • Python & Data Automation • Reconciliation Specialist</p>
+        <p>Systems Engineer • Developer • Data & Logic Enthusiast</p>
         <nav>
             <a href="index.html">Home</a> |
             <a href="projects.html">Projects</a> |
@@ -19,12 +20,13 @@
     <main>
         <section>
             <h2>Welcome!</h2>
-            <p>"Transforming operations with smart automation and solid logic."</p>
-            <p>This is my professional technical portfolio. Here you'll find use case implementations, reconciliation logic, Python projects and web systems I've developed to enhance operational efficiency.</p>
+            <p><strong>“Transforming operations with smart automation and solid logic.”</strong></p>
+            <p>I specialize in implementing technical solutions with a focus on operational efficiency and data reconciliation. Explore my projects to see real-world examples of scalable implementations using Python, SQL, Excel, and web technologies.</p>
+            <a href="https://www.linkedin.com/in/paula-cruz-98b683311" target="_blank">Visit my LinkedIn</a>
         </section>
     </main>
     <footer>
-        <p>Contact: paulacruz2017@gmail.com • Bogotá, Colombia</p>
+        <p>📧 paulacruz2017@gmail.com | 📍 Bogotá, Colombia</p>
     </footer>
 </body>
 </html>
