--- a/about.html
+++ b/about.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,8 +16,9 @@
     </header>
     <main>
         <section>
-            <p>I'm Paula Cruz Baquero, a Systems Engineer specialized in software development and business logic automation. I have over 4 years of experience in designing, implementing, and optimizing technical solutions for operational and financial processes.</p>
-            <p>I’m passionate about digital transformation, automation with Python, and smart implementations that make real impact. Currently improving my skills in AI and reconciliation systems.</p>
+            <p>I’m Paula Cruz Baquero, a Systems Engineer specialized in software development and automation. With over 4 years of experience in designing, implementing, and optimizing digital solutions, I’m passionate about creating tools that simplify complexity and generate value.</p>
+            <p>My main skills include Python, SQL, Excel automation, cloud platforms, and logic-based reconciliation processes. I’m currently enhancing my knowledge in Artificial Intelligence and Python with Parquesoft TI.</p>
+            <p>Curious, proactive and committed to learning every day.</p>
         </section>
     </main>
     <footer>
