--- a/projects.html
+++ b/projects.html
@@ -18,16 +18,16 @@
     <main>
         <section>
             <ul>
-                <li><strong>Reconciliación Financiera:</strong> Automatiza la comparación entre pagos y bancos usando Python y Excel.</li>
-                <li><strong>Reporte Tesorería PDF:</strong> Generador automático de reportes financieros diarios en PDF.</li>
-                <li><strong>Dashboard Operativo:</strong> Indicadores clave en Excel avanzado con macros y gráficos.</li>
-                <li><strong>CRUD Web:</strong> Registro y visualización de transacciones financieras en Django.</li>
-                <li><strong>Validador de Datos:</strong> Limpieza y control de calidad de archivos masivos.</li>
-                <li><strong>Simulador Revisión Contable:</strong> Automatización de flujo de revisión-validación-aprobación.</li>
-                <li><strong>Consultas SQL Reconciliación:</strong> SQL para detectar diferencias entre dos fuentes financieras.</li>
-                <li><strong>Análisis de Ventas:</strong> Análisis exploratorio con Python y visualización de datos.</li>
-                <li><strong>Validador Archivos Web:</strong> Carga de archivos vía frontend con verificación inmediata.</li>
-                <li><strong>Consolidador Archivos Múltiples:</strong> Une múltiples fuentes en un solo archivo depurado.</li>
+                <li><strong>🧮 Reconciliation System:</strong> Automated comparison of financial reports using Python and Excel.</li>
+                <li><strong>📊 Treasury Report Generator:</strong> Daily PDF reports built with pandas and ReportLab.</li>
+                <li><strong>📈 Excel Dashboard:</strong> KPIs and charts for operational performance (macros, slicers).</li>
+                <li><strong>🌐 Financial CRUD Web App:</strong> Django-based client & transaction management.</li>
+                <li><strong>✅ Data Validator:</strong> Bulk file checker with error export and clean-up logic.</li>
+                <li><strong>🧾 Accounting Process Simulator:</strong> Approval pipeline with business rules in Python.</li>
+                <li><strong>🔍 SQL Reconciliation Queries:</strong> Difference detection across financial datasets.</li>
+                <li><strong>📦 Sales Data Analysis:</strong> Exploratory visualization using Python + seaborn.</li>
+                <li><strong>🗂️ File Upload Validator (Web):</strong> HTML + Python backend for instant checks.</li>
+                <li><strong>📃 Multi-source File Consolidator:</strong> Merge, clean and unify records automatically.</li>
             </ul>
         </section>
     </main>
